<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brewmasters</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_login">Login Activity</string>

    <!-- Strings related to register -->
    <string name="registering_user">Registering user...</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
</resources>
